--- a/requirements.txt
+++ b/requirements.txt
@@ -21,9 +21,9 @@ python-dateutil==2.8.2
 requests==2.28.1
 six==1.16.0
 sympy==1.11.1
-torch==2.0.1+cpu
-torchaudio==2.0.2+cpu
-torchvision==0.15.2+cpu
+torch==2.0.1
+torchaudio==2.0.2
+torchvision==0.15.2
 typing_extensions==4.4.0
 urllib3==1.26.13
 yarg==0.1.9
