--- a/requirements.txt
+++ b/requirements.txt
@@ -45,9 +45,9 @@ requests==2.28.1
 six==1.16.0
 stack-data==0.6.2
 sympy==1.11.1
-torch==2.0.1+cpu
-torchaudio==2.0.2+cpu
-torchvision==0.15.2+cpu
+torch==2.0.1
+torchaudio==2.0.2
+torchvision==0.15.2
 tornado==6.3.2
 traitlets==5.9.0
 typing_extensions==4.4.0
